<?xml version="1.0" encoding="utf-8"?>
<!--
/*
** Copyright (C) 2010 Cyril Mottier (http://www.cyrilmottier.com)
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->

<resources>
    <string name="app_name">吃货联盟</string>
    
    <string name="more_info_on_greendroid">For more information on the GreenDroid library, go to the GitHub project\'s web page:</string>
    
    <!-- Activities labels -->
    <string name="general_info_label">General information</string>
    <string name="basic_item_label">Basic items</string>
    <string name="xml_item_label">XML items</string>
    <string name="tweaked_item_view_label">Tweaked itemviews</string>
    <string name="segmented_label">SegmentedBar</string>
    <string name="action_bar_activity_label">ActionBarActivity</string>
    <string name="quick_action_label">QuickAction</string>
    <string name="simple_async_image_view_label">Simple AsyncImageView</string>
    <string name="async_image_view_list_view_label">AsyncImageView in ListView</string>
    <string name="map_pin_drawable_label">MapPinDrawable</string>
    <string name="paged_view_label">PagedView &amp; PageIndicator</string>
    
    <string name="about">About</string>
    <string name="license">License</string>
    
    <!-- String used in the SegmentedActivity -->
    <string name="segment_1">Jeff</string>
    <string name="segment_2">Romain</string>
    <string name="segment_3">Adam</string>
    <string name="segment_4">Dan</string>
    
    <string name="show_image_1">Set image 1</string>
    <string name="show_image_2">Set image 2</string>
    <string name="show_image_3">Set image 3</string>
    
    <string name="first_screen">First screen</string>
    
    <string name="refresh_pressed">You\'ve just pressed a ActionBarItem.Type.Refresh button</string>
    <string name="custom_drawable">Custom drawable. Click on another item instead</string>
    
    <string name="image_for_position">Image for position </string>
    
    <string name="about_content">GreenDroid is a development library for the Android platform. It is intented to make UI developments easier and consistent through your applications.\n\nThe GreenDroid project has been initiated by <a href="http://www.cyrilmottier.com">Cyril Mottier</a></string>
    
    <string name="newOne">新建</string>
    <string name="recommand">推荐</string>
    <string name="list">榜单</string>
    <string name="more">更多</string>
    
    <string name="personalInfo">个人资料</string>
    <string name="mark">收藏</string>
    <string name="setting">设置</string>
    
    <string name="shop_info_edit">商户信息</string>
    <string name="shop_status_edit">营业状态</string>
    <string name="shop_duplicate">举报重复</string>
    
    <string name="shop_name">店名</string>
    <string name="location">位置</string>
    <string name="phone">电话</string>
    <string name="per_money">人均消费</string>
    <string name="open_time">营业时间</string>
    <string name="tag">备注</string>
    <string name="submit">提交</string>
    
    <string name="loc_mark">签到</string>
    <string name="evaluate">评价</string>
    <string name="correct">纠错</string>
    <string name="chi_duo_shi_guang">吃多识广</string>
    <string name="kai_tuo_zhe">开拓者</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="user_name">用户名</string>
    <string name="user_intro">个人介绍个人介绍个人介绍个人介绍</string>
    <string name="user_grade">等级</string>
    <string name="user_shop">店铺</string>
    <string name="user_comment">评论</string>
    <string name="user_trends">动态</string>
</resources>
